@@ -1,2 +1,3 @@
 Henrik Carlqvist		main developer
 Bob Tennent 			helped fixing problems compiling on RedHat 7.3
+Gurkan Sengun                   wrote the original man-page
