@@ -1,5 +1,8 @@
 Date       Version  Comment
 ---------------------------------------------------------------------------
+22/2 2003  1.0.2    Documentation update, man-page contributed by
+                    Gurkan Sengun 
+
 9/8 2002   1.0.1    Fixed problem compiling sv_SE.po with newer versions of
                     msgfmt
 
